Fix Menu Z-Index and Inbound Trip Service Comment

--- a/app/dashboard/styles.css
+++ b/app/dashboard/styles.css
@@ -24,7 +24,7 @@
   position: fixed;
   top: 0;
   color: #000;
-  z-index: 0;
+  z-index: 1;
   overflow-y: auto;
   -webkit-transition: border 0.5s ease-out;
   -o-transition: border 0.5s ease-out;
